custom vars correction

--- a/.github/workflows/env-vars.yaml
+++ b/.github/workflows/env-vars.yaml
@@ -24,7 +24,7 @@ jobs:
         env: 
           STEP_LEVEL_ENV: Only Available to only this step
           WF_LEVEL_ENV: Overriden in step
-        run:
+        run: |
           echo '${{ env.STEP_LEVEL_ENV }}'
           echo $STEP_LEVEL_ENV
           echo $WF_LEVEL_ENV
