--- a/.github/workflows/env-vars.yaml
+++ b/.github/workflows/env-vars.yaml
@@ -20,6 +20,10 @@ jobs:
       # In this case is evaluated by Github Actions before and sended to the runner machine once evaluated.
       - name: Log Context
         run: echo '${{ github.ref }}'
+      - name: Set Env Var
+        run: |
+          echo "NEW_ENV_VAR=$(date)" >> "$GITHUB_ENV"
+          echo "JOB_LEVEL_ENV=$RANDOM" >> "$GITHUB_ENV"
       - name: Log Custom ENV Vars
         env: 
           STEP_LEVEL_ENV: Only Available to only this step
@@ -28,6 +32,7 @@ jobs:
           echo '${{ env.STEP_LEVEL_ENV }}'
           echo $STEP_LEVEL_ENV
           echo $WF_LEVEL_ENV
-          echo $JOB_LEVEL_ENV          
+          echo $JOB_LEVEL_ENV
+          echo $NEW_ENV_VAR
 
 
