vars and secrets

--- a/.github/workflows/vars-and-secrets.yaml
+++ b/.github/workflows/vars-and-secrets.yaml
@@ -12,7 +12,7 @@ jobs:
     steps:
       - name: Run only if BOOLEAN_SECRET is true
         if: env.BOOLEAN_SECRET == 'true'
-        run: echo "I ran"
+        run: echo "I ran only when BOOLEAN_SECRET is true"
       - name: Log vars
         run: |
           echo '${{ vars.JOBS_RUNNER }}'
