--- a/.github/workflows/vars-and-secrets.yaml
+++ b/.github/workflows/vars-and-secrets.yaml
@@ -2,6 +2,19 @@ name: Variables and Secrets
 on: [push]
 
 jobs:
+  decrypt-file:
+    runs-on: ${{ vars.JOBS_RUNNER }}
+    steps:
+      - uses: actions/checkout@v3
+      - name: Decrypt file
+        env: 
+          PASSPHRASE: ${{ secrets.PASSPHRASE }}
+        run: |
+          mkdir $HOME/secrets
+          gpg --quiet --batch --yes --decrypt --passphrase="$PASSPHRASE" --output $HOME/secrets/secret.json secret.json.gpg
+      - name: View Encrypted file contents
+        run:
+          cat $HOME/secrets/secret.json
   log-vars:
     runs-on: ${{ vars.JOBS_RUNNER }}
     environment: 'staging'
