--- a/.github/workflows/matrix.yaml
+++ b/.github/workflows/matrix.yaml
@@ -3,7 +3,7 @@ on: [push]
 
 jobs:
   node-matrix:
-    continue-on-error: ${{ (matrix.experimental == true) || (matrix.os == 'mcxos-latest') }}
+    continue-on-error: ${{ (matrix.experimental == true) || (matrix.os == 'macos-latest') }}
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest]
