--- a/.github/workflows/dynamic-matrix.yaml
+++ b/.github/workflows/dynamic-matrix.yaml
@@ -24,6 +24,8 @@ jobs:
           echo '${{ steps.step-2.outputs.step-output }}'
   prepare-matrix:
     runs-on: ubuntu-latest
+    outputs:
+      matrix-arrays: ${{ steps.matrix-arrays.outputs.result }}
     steps:
       - name: Get all configured options
         id: matrix-arrays
@@ -33,12 +35,12 @@ jobs:
           result-encoding: json
       - name: Check the values recovered
         run: echo '${{ steps.matrix-arrays.outputs.result }}'
-      
   node-matrix:
+    needs: prepare-matrix
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest]
-        node-version: [14, 15, 16]
+        os: ${{ fromJson(needs.prepare-matrix.outputs.matrix-arrays).os }}
+        node-version: ${{ fromJson(needs.prepare-matrix.outputs.matrix-arrays).node-version }}
     runs-on: ${{ matrix.os }}
     steps:
       - run: node -v
