--- a/.github/workflows/dynamic-matrix.yaml
+++ b/.github/workflows/dynamic-matrix.yaml
@@ -17,11 +17,14 @@ jobs:
     steps:
       - run: echo "step-output=value" >> $GITHUB_OUTPUT
         id: step-1
-      - run: echo "step-output=value 2" >> $GITHUB_OUTPUT
+      - run: | 
+          echo "step-output=value 2" >> $GITHUB_OUTPUT
+          echo "step-output2=value 3" >> $GITHUB_OUTPUT
         id: step-2
       - run: |
           echo '${{ steps.step-1.outputs.step-output }}'
           echo '${{ steps.step-2.outputs.step-output }}'
+          echo '${{ steps.step-2.outputs.step-output2 }}'
   prepare-matrix:
     runs-on: ubuntu-latest
     outputs:
