--- a/.github/workflows/concurrency-2.yaml
+++ b/.github/workflows/concurrency-2.yaml
@@ -1,4 +1,5 @@
 name: Concurrency 2
+run-name: Concurrency 2 (${{ inputs.environment }})
 on:
   workflow_dispatch:
     inputs:
@@ -6,7 +7,11 @@ on:
         description: "Environment"
         type: environment
         required: true
-
+# this can be used at workflow or job level. Here is an example of workflow level
+concurrency: 
+  # group: concurrency-group-1
+  group: ${{ github.event.inputs.environment }}
+  cancel-in-progress: true
 jobs:
   sleep:
     runs-on: ubuntu-latest
