--- a/.github/workflows/concurrency-1.yaml
+++ b/.github/workflows/concurrency-1.yaml
@@ -10,7 +10,7 @@ on:
 # this can be used at workflow or job level. Here is an example of workflow level
 concurrency: 
   # group: concurrency-group-1
-  group: ${{ github.event.inputs.environment }}
+  group: ${{ github.workflow }} - ${{ github.event.inputs.environment }}
   cancel-in-progress: true
 jobs:
   sleep:
