--- a/.github/workflows/using-reusable-workflows.yaml
+++ b/.github/workflows/using-reusable-workflows.yaml
@@ -17,7 +17,7 @@ jobs:
     secrets:
       access-token: ${{ secrets.ACCESS_TOKEN }}
   calling-a-reusable-wf-in-the-same-repo:
-    uses: ./reusable-workflow.yaml
+    uses: ./reusable-workflow.yaml@latest
   using-reusable-wf-output:
     runs-on: ubuntu-latest
     needs: calling-a-reusable-wf-in-the-same-repo
